fix evil microsoft(tm) scrollbars in ops (#369)
* fix evil microsoft(tm) scrollbars in ops

* make the previous change apply across all ops

--- a/app/assets/stylesheets/layout/admin/layout.scss
+++ b/app/assets/stylesheets/layout/admin/layout.scss
@@ -1,4 +1,8 @@
 body.admin {
+  * {
+    overflow: auto;
+  }
+
   .column-set {
     @include app-column-container;
 
